[gd_scene load_steps=11 format=2]

[ext_resource path="res://Boid/Boid.gd" type="Script" id=1]
[ext_resource path="res://Boid/Bugoid_wing_1.png" type="Texture" id=2]
[ext_resource path="res://Boid/Bugoid_wing_2.png" type="Texture" id=3]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=4]
radius = 28.4612

[sub_resource type="PrismMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Boid" type="KinematicBody"]
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Detector" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Detector"]
shape = SubResource( 4 )

[node name="MeshYContainer" type="Spatial" parent="."]

[node name="MeshZContainer" type="Spatial" parent="MeshYContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.57065e-22 )

[node name="DirectionMesh" type="MeshInstance" parent="MeshYContainer/MeshZContainer"]
transform = Transform( -3.49691e-08, 2, -2.18557e-08, 0, -8.74228e-08, -0.5, -0.8, -8.74228e-08, 9.55343e-16, 1.8806, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="MeshYContainer/MeshZContainer/DirectionMesh"]
transform = Transform( -8.74228e-07, -70, 0, 20, -3.0598e-06, 0, 0, 0, 0, 1.40384e-07, -1.28465, 2.24615e-07 )
frames = SubResource( 7 )
frame = 1
playing = true

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
